// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tree clusters clusterizeFlatTree 1`] = `
[
  {
    "badge": undefined,
    "color": undefined,
    "duration": 4318.8956400700545,
    "end": 4854.223027416701,
    "level": 0,
    "nodes": [
      {
        "end": 4854.223027416701,
        "index": 0,
        "level": 0,
        "parent": null,
        "source": {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "duration": 2.461531364710936,
                  "name": "MhxhARxSxzsGT",
                  "start": 536.1650838600234,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 0.0689690274144823,
                  "name": "GTUYcE",
                  "start": 538.6556924085829,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 2.9309201647754435,
                  "name": "KTdZsYg",
                  "start": 538.7280951432377,
                  "type": "dUGYl",
                },
              ],
              "duration": 55.127917361818845,
              "name": "ZhzOuVaDQIp",
              "start": 536.1510397400183,
              "type": "dUGYl",
            },
            {
              "children": [],
              "duration": 371.3241221156734,
              "name": "QtboRAlO",
              "start": 594.290771087428,
              "type": "dUGYl",
            },
          ],
          "duration": 4318.8956400700545,
          "name": "uctgLKhJRHx",
          "start": 535.327387346647,
          "type": "dUGYl",
        },
      },
    ],
    "pattern": undefined,
    "start": 535.327387346647,
    "type": "dUGYl",
  },
  {
    "badge": undefined,
    "color": undefined,
    "duration": 55.127917361818845,
    "end": 591.2789571018371,
    "level": 1,
    "nodes": [
      {
        "end": 591.2789571018371,
        "index": 1,
        "level": 1,
        "parent": {
          "end": 4854.223027416701,
          "index": 0,
          "level": 0,
          "parent": null,
          "source": {
            "children": [
              {
                "children": [
                  {
                    "children": [],
                    "duration": 2.461531364710936,
                    "name": "MhxhARxSxzsGT",
                    "start": 536.1650838600234,
                    "type": "dUGYl",
                  },
                  {
                    "children": [],
                    "duration": 0.0689690274144823,
                    "name": "GTUYcE",
                    "start": 538.6556924085829,
                    "type": "dUGYl",
                  },
                  {
                    "children": [],
                    "duration": 2.9309201647754435,
                    "name": "KTdZsYg",
                    "start": 538.7280951432377,
                    "type": "dUGYl",
                  },
                ],
                "duration": 55.127917361818845,
                "name": "ZhzOuVaDQIp",
                "start": 536.1510397400183,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 371.3241221156734,
                "name": "QtboRAlO",
                "start": 594.290771087428,
                "type": "dUGYl",
              },
            ],
            "duration": 4318.8956400700545,
            "name": "uctgLKhJRHx",
            "start": 535.327387346647,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [
            {
              "children": [],
              "duration": 2.461531364710936,
              "name": "MhxhARxSxzsGT",
              "start": 536.1650838600234,
              "type": "dUGYl",
            },
            {
              "children": [],
              "duration": 0.0689690274144823,
              "name": "GTUYcE",
              "start": 538.6556924085829,
              "type": "dUGYl",
            },
            {
              "children": [],
              "duration": 2.9309201647754435,
              "name": "KTdZsYg",
              "start": 538.7280951432377,
              "type": "dUGYl",
            },
          ],
          "duration": 55.127917361818845,
          "name": "ZhzOuVaDQIp",
          "start": 536.1510397400183,
          "type": "dUGYl",
        },
      },
    ],
    "pattern": undefined,
    "start": 536.1510397400183,
    "type": "dUGYl",
  },
  {
    "badge": undefined,
    "color": undefined,
    "duration": 371.3241221156734,
    "end": 965.6148932031014,
    "level": 1,
    "nodes": [
      {
        "end": 965.6148932031014,
        "index": 5,
        "level": 1,
        "parent": {
          "end": 4854.223027416701,
          "index": 0,
          "level": 0,
          "parent": null,
          "source": {
            "children": [
              {
                "children": [
                  {
                    "children": [],
                    "duration": 2.461531364710936,
                    "name": "MhxhARxSxzsGT",
                    "start": 536.1650838600234,
                    "type": "dUGYl",
                  },
                  {
                    "children": [],
                    "duration": 0.0689690274144823,
                    "name": "GTUYcE",
                    "start": 538.6556924085829,
                    "type": "dUGYl",
                  },
                  {
                    "children": [],
                    "duration": 2.9309201647754435,
                    "name": "KTdZsYg",
                    "start": 538.7280951432377,
                    "type": "dUGYl",
                  },
                ],
                "duration": 55.127917361818845,
                "name": "ZhzOuVaDQIp",
                "start": 536.1510397400183,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 371.3241221156734,
                "name": "QtboRAlO",
                "start": 594.290771087428,
                "type": "dUGYl",
              },
            ],
            "duration": 4318.8956400700545,
            "name": "uctgLKhJRHx",
            "start": 535.327387346647,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [],
          "duration": 371.3241221156734,
          "name": "QtboRAlO",
          "start": 594.290771087428,
          "type": "dUGYl",
        },
      },
    ],
    "pattern": undefined,
    "start": 594.290771087428,
    "type": "dUGYl",
  },
  {
    "badge": undefined,
    "color": undefined,
    "duration": 5.49393144798978,
    "end": 541.6590153080132,
    "level": 2,
    "nodes": [
      {
        "end": 538.6266152247343,
        "index": 2,
        "level": 2,
        "parent": {
          "end": 591.2789571018371,
          "index": 1,
          "level": 1,
          "parent": {
            "end": 4854.223027416701,
            "index": 0,
            "level": 0,
            "parent": null,
            "source": {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "duration": 2.461531364710936,
                      "name": "MhxhARxSxzsGT",
                      "start": 536.1650838600234,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 0.0689690274144823,
                      "name": "GTUYcE",
                      "start": 538.6556924085829,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 2.9309201647754435,
                      "name": "KTdZsYg",
                      "start": 538.7280951432377,
                      "type": "dUGYl",
                    },
                  ],
                  "duration": 55.127917361818845,
                  "name": "ZhzOuVaDQIp",
                  "start": 536.1510397400183,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 371.3241221156734,
                  "name": "QtboRAlO",
                  "start": 594.290771087428,
                  "type": "dUGYl",
                },
              ],
              "duration": 4318.8956400700545,
              "name": "uctgLKhJRHx",
              "start": 535.327387346647,
              "type": "dUGYl",
            },
          },
          "source": {
            "children": [
              {
                "children": [],
                "duration": 2.461531364710936,
                "name": "MhxhARxSxzsGT",
                "start": 536.1650838600234,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 0.0689690274144823,
                "name": "GTUYcE",
                "start": 538.6556924085829,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 2.9309201647754435,
                "name": "KTdZsYg",
                "start": 538.7280951432377,
                "type": "dUGYl",
              },
            ],
            "duration": 55.127917361818845,
            "name": "ZhzOuVaDQIp",
            "start": 536.1510397400183,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [],
          "duration": 2.461531364710936,
          "name": "MhxhARxSxzsGT",
          "start": 536.1650838600234,
          "type": "dUGYl",
        },
      },
      {
        "end": 538.7246614359974,
        "index": 3,
        "level": 2,
        "parent": {
          "end": 591.2789571018371,
          "index": 1,
          "level": 1,
          "parent": {
            "end": 4854.223027416701,
            "index": 0,
            "level": 0,
            "parent": null,
            "source": {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "duration": 2.461531364710936,
                      "name": "MhxhARxSxzsGT",
                      "start": 536.1650838600234,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 0.0689690274144823,
                      "name": "GTUYcE",
                      "start": 538.6556924085829,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 2.9309201647754435,
                      "name": "KTdZsYg",
                      "start": 538.7280951432377,
                      "type": "dUGYl",
                    },
                  ],
                  "duration": 55.127917361818845,
                  "name": "ZhzOuVaDQIp",
                  "start": 536.1510397400183,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 371.3241221156734,
                  "name": "QtboRAlO",
                  "start": 594.290771087428,
                  "type": "dUGYl",
                },
              ],
              "duration": 4318.8956400700545,
              "name": "uctgLKhJRHx",
              "start": 535.327387346647,
              "type": "dUGYl",
            },
          },
          "source": {
            "children": [
              {
                "children": [],
                "duration": 2.461531364710936,
                "name": "MhxhARxSxzsGT",
                "start": 536.1650838600234,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 0.0689690274144823,
                "name": "GTUYcE",
                "start": 538.6556924085829,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 2.9309201647754435,
                "name": "KTdZsYg",
                "start": 538.7280951432377,
                "type": "dUGYl",
              },
            ],
            "duration": 55.127917361818845,
            "name": "ZhzOuVaDQIp",
            "start": 536.1510397400183,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [],
          "duration": 0.0689690274144823,
          "name": "GTUYcE",
          "start": 538.6556924085829,
          "type": "dUGYl",
        },
      },
      {
        "end": 541.6590153080132,
        "index": 4,
        "level": 2,
        "parent": {
          "end": 591.2789571018371,
          "index": 1,
          "level": 1,
          "parent": {
            "end": 4854.223027416701,
            "index": 0,
            "level": 0,
            "parent": null,
            "source": {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "duration": 2.461531364710936,
                      "name": "MhxhARxSxzsGT",
                      "start": 536.1650838600234,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 0.0689690274144823,
                      "name": "GTUYcE",
                      "start": 538.6556924085829,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 2.9309201647754435,
                      "name": "KTdZsYg",
                      "start": 538.7280951432377,
                      "type": "dUGYl",
                    },
                  ],
                  "duration": 55.127917361818845,
                  "name": "ZhzOuVaDQIp",
                  "start": 536.1510397400183,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 371.3241221156734,
                  "name": "QtboRAlO",
                  "start": 594.290771087428,
                  "type": "dUGYl",
                },
              ],
              "duration": 4318.8956400700545,
              "name": "uctgLKhJRHx",
              "start": 535.327387346647,
              "type": "dUGYl",
            },
          },
          "source": {
            "children": [
              {
                "children": [],
                "duration": 2.461531364710936,
                "name": "MhxhARxSxzsGT",
                "start": 536.1650838600234,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 0.0689690274144823,
                "name": "GTUYcE",
                "start": 538.6556924085829,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 2.9309201647754435,
                "name": "KTdZsYg",
                "start": 538.7280951432377,
                "type": "dUGYl",
              },
            ],
            "duration": 55.127917361818845,
            "name": "ZhzOuVaDQIp",
            "start": 536.1510397400183,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [],
          "duration": 2.9309201647754435,
          "name": "KTdZsYg",
          "start": 538.7280951432377,
          "type": "dUGYl",
        },
      },
    ],
    "pattern": undefined,
    "start": 536.1650838600234,
    "type": "dUGYl",
  },
]
`;

exports[`tree clusters flatTree 1`] = `
[
  {
    "end": 4854.223027416701,
    "index": 0,
    "level": 0,
    "parent": null,
    "source": {
      "children": [
        {
          "children": [
            {
              "children": [],
              "duration": 2.461531364710936,
              "name": "MhxhARxSxzsGT",
              "start": 536.1650838600234,
              "type": "dUGYl",
            },
            {
              "children": [],
              "duration": 0.0689690274144823,
              "name": "GTUYcE",
              "start": 538.6556924085829,
              "type": "dUGYl",
            },
            {
              "children": [],
              "duration": 2.9309201647754435,
              "name": "KTdZsYg",
              "start": 538.7280951432377,
              "type": "dUGYl",
            },
          ],
          "duration": 55.127917361818845,
          "name": "ZhzOuVaDQIp",
          "start": 536.1510397400183,
          "type": "dUGYl",
        },
        {
          "children": [],
          "duration": 371.3241221156734,
          "name": "QtboRAlO",
          "start": 594.290771087428,
          "type": "dUGYl",
        },
      ],
      "duration": 4318.8956400700545,
      "name": "uctgLKhJRHx",
      "start": 535.327387346647,
      "type": "dUGYl",
    },
  },
  {
    "end": 591.2789571018371,
    "index": 1,
    "level": 1,
    "parent": {
      "end": 4854.223027416701,
      "index": 0,
      "level": 0,
      "parent": null,
      "source": {
        "children": [
          {
            "children": [
              {
                "children": [],
                "duration": 2.461531364710936,
                "name": "MhxhARxSxzsGT",
                "start": 536.1650838600234,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 0.0689690274144823,
                "name": "GTUYcE",
                "start": 538.6556924085829,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 2.9309201647754435,
                "name": "KTdZsYg",
                "start": 538.7280951432377,
                "type": "dUGYl",
              },
            ],
            "duration": 55.127917361818845,
            "name": "ZhzOuVaDQIp",
            "start": 536.1510397400183,
            "type": "dUGYl",
          },
          {
            "children": [],
            "duration": 371.3241221156734,
            "name": "QtboRAlO",
            "start": 594.290771087428,
            "type": "dUGYl",
          },
        ],
        "duration": 4318.8956400700545,
        "name": "uctgLKhJRHx",
        "start": 535.327387346647,
        "type": "dUGYl",
      },
    },
    "source": {
      "children": [
        {
          "children": [],
          "duration": 2.461531364710936,
          "name": "MhxhARxSxzsGT",
          "start": 536.1650838600234,
          "type": "dUGYl",
        },
        {
          "children": [],
          "duration": 0.0689690274144823,
          "name": "GTUYcE",
          "start": 538.6556924085829,
          "type": "dUGYl",
        },
        {
          "children": [],
          "duration": 2.9309201647754435,
          "name": "KTdZsYg",
          "start": 538.7280951432377,
          "type": "dUGYl",
        },
      ],
      "duration": 55.127917361818845,
      "name": "ZhzOuVaDQIp",
      "start": 536.1510397400183,
      "type": "dUGYl",
    },
  },
  {
    "end": 965.6148932031014,
    "index": 5,
    "level": 1,
    "parent": {
      "end": 4854.223027416701,
      "index": 0,
      "level": 0,
      "parent": null,
      "source": {
        "children": [
          {
            "children": [
              {
                "children": [],
                "duration": 2.461531364710936,
                "name": "MhxhARxSxzsGT",
                "start": 536.1650838600234,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 0.0689690274144823,
                "name": "GTUYcE",
                "start": 538.6556924085829,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 2.9309201647754435,
                "name": "KTdZsYg",
                "start": 538.7280951432377,
                "type": "dUGYl",
              },
            ],
            "duration": 55.127917361818845,
            "name": "ZhzOuVaDQIp",
            "start": 536.1510397400183,
            "type": "dUGYl",
          },
          {
            "children": [],
            "duration": 371.3241221156734,
            "name": "QtboRAlO",
            "start": 594.290771087428,
            "type": "dUGYl",
          },
        ],
        "duration": 4318.8956400700545,
        "name": "uctgLKhJRHx",
        "start": 535.327387346647,
        "type": "dUGYl",
      },
    },
    "source": {
      "children": [],
      "duration": 371.3241221156734,
      "name": "QtboRAlO",
      "start": 594.290771087428,
      "type": "dUGYl",
    },
  },
  {
    "end": 538.6266152247343,
    "index": 2,
    "level": 2,
    "parent": {
      "end": 591.2789571018371,
      "index": 1,
      "level": 1,
      "parent": {
        "end": 4854.223027416701,
        "index": 0,
        "level": 0,
        "parent": null,
        "source": {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "duration": 2.461531364710936,
                  "name": "MhxhARxSxzsGT",
                  "start": 536.1650838600234,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 0.0689690274144823,
                  "name": "GTUYcE",
                  "start": 538.6556924085829,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 2.9309201647754435,
                  "name": "KTdZsYg",
                  "start": 538.7280951432377,
                  "type": "dUGYl",
                },
              ],
              "duration": 55.127917361818845,
              "name": "ZhzOuVaDQIp",
              "start": 536.1510397400183,
              "type": "dUGYl",
            },
            {
              "children": [],
              "duration": 371.3241221156734,
              "name": "QtboRAlO",
              "start": 594.290771087428,
              "type": "dUGYl",
            },
          ],
          "duration": 4318.8956400700545,
          "name": "uctgLKhJRHx",
          "start": 535.327387346647,
          "type": "dUGYl",
        },
      },
      "source": {
        "children": [
          {
            "children": [],
            "duration": 2.461531364710936,
            "name": "MhxhARxSxzsGT",
            "start": 536.1650838600234,
            "type": "dUGYl",
          },
          {
            "children": [],
            "duration": 0.0689690274144823,
            "name": "GTUYcE",
            "start": 538.6556924085829,
            "type": "dUGYl",
          },
          {
            "children": [],
            "duration": 2.9309201647754435,
            "name": "KTdZsYg",
            "start": 538.7280951432377,
            "type": "dUGYl",
          },
        ],
        "duration": 55.127917361818845,
        "name": "ZhzOuVaDQIp",
        "start": 536.1510397400183,
        "type": "dUGYl",
      },
    },
    "source": {
      "children": [],
      "duration": 2.461531364710936,
      "name": "MhxhARxSxzsGT",
      "start": 536.1650838600234,
      "type": "dUGYl",
    },
  },
  {
    "end": 538.7246614359974,
    "index": 3,
    "level": 2,
    "parent": {
      "end": 591.2789571018371,
      "index": 1,
      "level": 1,
      "parent": {
        "end": 4854.223027416701,
        "index": 0,
        "level": 0,
        "parent": null,
        "source": {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "duration": 2.461531364710936,
                  "name": "MhxhARxSxzsGT",
                  "start": 536.1650838600234,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 0.0689690274144823,
                  "name": "GTUYcE",
                  "start": 538.6556924085829,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 2.9309201647754435,
                  "name": "KTdZsYg",
                  "start": 538.7280951432377,
                  "type": "dUGYl",
                },
              ],
              "duration": 55.127917361818845,
              "name": "ZhzOuVaDQIp",
              "start": 536.1510397400183,
              "type": "dUGYl",
            },
            {
              "children": [],
              "duration": 371.3241221156734,
              "name": "QtboRAlO",
              "start": 594.290771087428,
              "type": "dUGYl",
            },
          ],
          "duration": 4318.8956400700545,
          "name": "uctgLKhJRHx",
          "start": 535.327387346647,
          "type": "dUGYl",
        },
      },
      "source": {
        "children": [
          {
            "children": [],
            "duration": 2.461531364710936,
            "name": "MhxhARxSxzsGT",
            "start": 536.1650838600234,
            "type": "dUGYl",
          },
          {
            "children": [],
            "duration": 0.0689690274144823,
            "name": "GTUYcE",
            "start": 538.6556924085829,
            "type": "dUGYl",
          },
          {
            "children": [],
            "duration": 2.9309201647754435,
            "name": "KTdZsYg",
            "start": 538.7280951432377,
            "type": "dUGYl",
          },
        ],
        "duration": 55.127917361818845,
        "name": "ZhzOuVaDQIp",
        "start": 536.1510397400183,
        "type": "dUGYl",
      },
    },
    "source": {
      "children": [],
      "duration": 0.0689690274144823,
      "name": "GTUYcE",
      "start": 538.6556924085829,
      "type": "dUGYl",
    },
  },
  {
    "end": 541.6590153080132,
    "index": 4,
    "level": 2,
    "parent": {
      "end": 591.2789571018371,
      "index": 1,
      "level": 1,
      "parent": {
        "end": 4854.223027416701,
        "index": 0,
        "level": 0,
        "parent": null,
        "source": {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "duration": 2.461531364710936,
                  "name": "MhxhARxSxzsGT",
                  "start": 536.1650838600234,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 0.0689690274144823,
                  "name": "GTUYcE",
                  "start": 538.6556924085829,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 2.9309201647754435,
                  "name": "KTdZsYg",
                  "start": 538.7280951432377,
                  "type": "dUGYl",
                },
              ],
              "duration": 55.127917361818845,
              "name": "ZhzOuVaDQIp",
              "start": 536.1510397400183,
              "type": "dUGYl",
            },
            {
              "children": [],
              "duration": 371.3241221156734,
              "name": "QtboRAlO",
              "start": 594.290771087428,
              "type": "dUGYl",
            },
          ],
          "duration": 4318.8956400700545,
          "name": "uctgLKhJRHx",
          "start": 535.327387346647,
          "type": "dUGYl",
        },
      },
      "source": {
        "children": [
          {
            "children": [],
            "duration": 2.461531364710936,
            "name": "MhxhARxSxzsGT",
            "start": 536.1650838600234,
            "type": "dUGYl",
          },
          {
            "children": [],
            "duration": 0.0689690274144823,
            "name": "GTUYcE",
            "start": 538.6556924085829,
            "type": "dUGYl",
          },
          {
            "children": [],
            "duration": 2.9309201647754435,
            "name": "KTdZsYg",
            "start": 538.7280951432377,
            "type": "dUGYl",
          },
        ],
        "duration": 55.127917361818845,
        "name": "ZhzOuVaDQIp",
        "start": 536.1510397400183,
        "type": "dUGYl",
      },
    },
    "source": {
      "children": [],
      "duration": 2.9309201647754435,
      "name": "KTdZsYg",
      "start": 538.7280951432377,
      "type": "dUGYl",
    },
  },
]
`;

exports[`tree clusters metaClusterizeFlatTree 1`] = `
[
  {
    "nodes": [
      {
        "end": 4854.223027416701,
        "index": 0,
        "level": 0,
        "parent": null,
        "source": {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "duration": 2.461531364710936,
                  "name": "MhxhARxSxzsGT",
                  "start": 536.1650838600234,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 0.0689690274144823,
                  "name": "GTUYcE",
                  "start": 538.6556924085829,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 2.9309201647754435,
                  "name": "KTdZsYg",
                  "start": 538.7280951432377,
                  "type": "dUGYl",
                },
              ],
              "duration": 55.127917361818845,
              "name": "ZhzOuVaDQIp",
              "start": 536.1510397400183,
              "type": "dUGYl",
            },
            {
              "children": [],
              "duration": 371.3241221156734,
              "name": "QtboRAlO",
              "start": 594.290771087428,
              "type": "dUGYl",
            },
          ],
          "duration": 4318.8956400700545,
          "name": "uctgLKhJRHx",
          "start": 535.327387346647,
          "type": "dUGYl",
        },
      },
    ],
  },
  {
    "nodes": [
      {
        "end": 591.2789571018371,
        "index": 1,
        "level": 1,
        "parent": {
          "end": 4854.223027416701,
          "index": 0,
          "level": 0,
          "parent": null,
          "source": {
            "children": [
              {
                "children": [
                  {
                    "children": [],
                    "duration": 2.461531364710936,
                    "name": "MhxhARxSxzsGT",
                    "start": 536.1650838600234,
                    "type": "dUGYl",
                  },
                  {
                    "children": [],
                    "duration": 0.0689690274144823,
                    "name": "GTUYcE",
                    "start": 538.6556924085829,
                    "type": "dUGYl",
                  },
                  {
                    "children": [],
                    "duration": 2.9309201647754435,
                    "name": "KTdZsYg",
                    "start": 538.7280951432377,
                    "type": "dUGYl",
                  },
                ],
                "duration": 55.127917361818845,
                "name": "ZhzOuVaDQIp",
                "start": 536.1510397400183,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 371.3241221156734,
                "name": "QtboRAlO",
                "start": 594.290771087428,
                "type": "dUGYl",
              },
            ],
            "duration": 4318.8956400700545,
            "name": "uctgLKhJRHx",
            "start": 535.327387346647,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [
            {
              "children": [],
              "duration": 2.461531364710936,
              "name": "MhxhARxSxzsGT",
              "start": 536.1650838600234,
              "type": "dUGYl",
            },
            {
              "children": [],
              "duration": 0.0689690274144823,
              "name": "GTUYcE",
              "start": 538.6556924085829,
              "type": "dUGYl",
            },
            {
              "children": [],
              "duration": 2.9309201647754435,
              "name": "KTdZsYg",
              "start": 538.7280951432377,
              "type": "dUGYl",
            },
          ],
          "duration": 55.127917361818845,
          "name": "ZhzOuVaDQIp",
          "start": 536.1510397400183,
          "type": "dUGYl",
        },
      },
      {
        "end": 965.6148932031014,
        "index": 5,
        "level": 1,
        "parent": {
          "end": 4854.223027416701,
          "index": 0,
          "level": 0,
          "parent": null,
          "source": {
            "children": [
              {
                "children": [
                  {
                    "children": [],
                    "duration": 2.461531364710936,
                    "name": "MhxhARxSxzsGT",
                    "start": 536.1650838600234,
                    "type": "dUGYl",
                  },
                  {
                    "children": [],
                    "duration": 0.0689690274144823,
                    "name": "GTUYcE",
                    "start": 538.6556924085829,
                    "type": "dUGYl",
                  },
                  {
                    "children": [],
                    "duration": 2.9309201647754435,
                    "name": "KTdZsYg",
                    "start": 538.7280951432377,
                    "type": "dUGYl",
                  },
                ],
                "duration": 55.127917361818845,
                "name": "ZhzOuVaDQIp",
                "start": 536.1510397400183,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 371.3241221156734,
                "name": "QtboRAlO",
                "start": 594.290771087428,
                "type": "dUGYl",
              },
            ],
            "duration": 4318.8956400700545,
            "name": "uctgLKhJRHx",
            "start": 535.327387346647,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [],
          "duration": 371.3241221156734,
          "name": "QtboRAlO",
          "start": 594.290771087428,
          "type": "dUGYl",
        },
      },
    ],
  },
  {
    "nodes": [
      {
        "end": 538.6266152247343,
        "index": 2,
        "level": 2,
        "parent": {
          "end": 591.2789571018371,
          "index": 1,
          "level": 1,
          "parent": {
            "end": 4854.223027416701,
            "index": 0,
            "level": 0,
            "parent": null,
            "source": {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "duration": 2.461531364710936,
                      "name": "MhxhARxSxzsGT",
                      "start": 536.1650838600234,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 0.0689690274144823,
                      "name": "GTUYcE",
                      "start": 538.6556924085829,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 2.9309201647754435,
                      "name": "KTdZsYg",
                      "start": 538.7280951432377,
                      "type": "dUGYl",
                    },
                  ],
                  "duration": 55.127917361818845,
                  "name": "ZhzOuVaDQIp",
                  "start": 536.1510397400183,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 371.3241221156734,
                  "name": "QtboRAlO",
                  "start": 594.290771087428,
                  "type": "dUGYl",
                },
              ],
              "duration": 4318.8956400700545,
              "name": "uctgLKhJRHx",
              "start": 535.327387346647,
              "type": "dUGYl",
            },
          },
          "source": {
            "children": [
              {
                "children": [],
                "duration": 2.461531364710936,
                "name": "MhxhARxSxzsGT",
                "start": 536.1650838600234,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 0.0689690274144823,
                "name": "GTUYcE",
                "start": 538.6556924085829,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 2.9309201647754435,
                "name": "KTdZsYg",
                "start": 538.7280951432377,
                "type": "dUGYl",
              },
            ],
            "duration": 55.127917361818845,
            "name": "ZhzOuVaDQIp",
            "start": 536.1510397400183,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [],
          "duration": 2.461531364710936,
          "name": "MhxhARxSxzsGT",
          "start": 536.1650838600234,
          "type": "dUGYl",
        },
      },
      {
        "end": 538.7246614359974,
        "index": 3,
        "level": 2,
        "parent": {
          "end": 591.2789571018371,
          "index": 1,
          "level": 1,
          "parent": {
            "end": 4854.223027416701,
            "index": 0,
            "level": 0,
            "parent": null,
            "source": {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "duration": 2.461531364710936,
                      "name": "MhxhARxSxzsGT",
                      "start": 536.1650838600234,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 0.0689690274144823,
                      "name": "GTUYcE",
                      "start": 538.6556924085829,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 2.9309201647754435,
                      "name": "KTdZsYg",
                      "start": 538.7280951432377,
                      "type": "dUGYl",
                    },
                  ],
                  "duration": 55.127917361818845,
                  "name": "ZhzOuVaDQIp",
                  "start": 536.1510397400183,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 371.3241221156734,
                  "name": "QtboRAlO",
                  "start": 594.290771087428,
                  "type": "dUGYl",
                },
              ],
              "duration": 4318.8956400700545,
              "name": "uctgLKhJRHx",
              "start": 535.327387346647,
              "type": "dUGYl",
            },
          },
          "source": {
            "children": [
              {
                "children": [],
                "duration": 2.461531364710936,
                "name": "MhxhARxSxzsGT",
                "start": 536.1650838600234,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 0.0689690274144823,
                "name": "GTUYcE",
                "start": 538.6556924085829,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 2.9309201647754435,
                "name": "KTdZsYg",
                "start": 538.7280951432377,
                "type": "dUGYl",
              },
            ],
            "duration": 55.127917361818845,
            "name": "ZhzOuVaDQIp",
            "start": 536.1510397400183,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [],
          "duration": 0.0689690274144823,
          "name": "GTUYcE",
          "start": 538.6556924085829,
          "type": "dUGYl",
        },
      },
      {
        "end": 541.6590153080132,
        "index": 4,
        "level": 2,
        "parent": {
          "end": 591.2789571018371,
          "index": 1,
          "level": 1,
          "parent": {
            "end": 4854.223027416701,
            "index": 0,
            "level": 0,
            "parent": null,
            "source": {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "duration": 2.461531364710936,
                      "name": "MhxhARxSxzsGT",
                      "start": 536.1650838600234,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 0.0689690274144823,
                      "name": "GTUYcE",
                      "start": 538.6556924085829,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 2.9309201647754435,
                      "name": "KTdZsYg",
                      "start": 538.7280951432377,
                      "type": "dUGYl",
                    },
                  ],
                  "duration": 55.127917361818845,
                  "name": "ZhzOuVaDQIp",
                  "start": 536.1510397400183,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 371.3241221156734,
                  "name": "QtboRAlO",
                  "start": 594.290771087428,
                  "type": "dUGYl",
                },
              ],
              "duration": 4318.8956400700545,
              "name": "uctgLKhJRHx",
              "start": 535.327387346647,
              "type": "dUGYl",
            },
          },
          "source": {
            "children": [
              {
                "children": [],
                "duration": 2.461531364710936,
                "name": "MhxhARxSxzsGT",
                "start": 536.1650838600234,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 0.0689690274144823,
                "name": "GTUYcE",
                "start": 538.6556924085829,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 2.9309201647754435,
                "name": "KTdZsYg",
                "start": 538.7280951432377,
                "type": "dUGYl",
              },
            ],
            "duration": 55.127917361818845,
            "name": "ZhzOuVaDQIp",
            "start": 536.1510397400183,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [],
          "duration": 2.9309201647754435,
          "name": "KTdZsYg",
          "start": 538.7280951432377,
          "type": "dUGYl",
        },
      },
    ],
  },
]
`;

exports[`tree clusters reclusterizeClusteredFlatTree 1`] = `
[
  {
    "badge": undefined,
    "color": undefined,
    "duration": 4318.8956400700545,
    "end": 4854.223027416701,
    "level": 0,
    "nodes": [
      {
        "end": 4854.223027416701,
        "index": 0,
        "level": 0,
        "parent": null,
        "source": {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "duration": 2.461531364710936,
                  "name": "MhxhARxSxzsGT",
                  "start": 536.1650838600234,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 0.0689690274144823,
                  "name": "GTUYcE",
                  "start": 538.6556924085829,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 2.9309201647754435,
                  "name": "KTdZsYg",
                  "start": 538.7280951432377,
                  "type": "dUGYl",
                },
              ],
              "duration": 55.127917361818845,
              "name": "ZhzOuVaDQIp",
              "start": 536.1510397400183,
              "type": "dUGYl",
            },
            {
              "children": [],
              "duration": 371.3241221156734,
              "name": "QtboRAlO",
              "start": 594.290771087428,
              "type": "dUGYl",
            },
          ],
          "duration": 4318.8956400700545,
          "name": "uctgLKhJRHx",
          "start": 535.327387346647,
          "type": "dUGYl",
        },
      },
    ],
    "pattern": undefined,
    "start": 535.327387346647,
    "type": "dUGYl",
  },
  {
    "badge": undefined,
    "color": undefined,
    "duration": 55.127917361818845,
    "end": 591.2789571018371,
    "level": 1,
    "nodes": [
      {
        "end": 591.2789571018371,
        "index": 1,
        "level": 1,
        "parent": {
          "end": 4854.223027416701,
          "index": 0,
          "level": 0,
          "parent": null,
          "source": {
            "children": [
              {
                "children": [
                  {
                    "children": [],
                    "duration": 2.461531364710936,
                    "name": "MhxhARxSxzsGT",
                    "start": 536.1650838600234,
                    "type": "dUGYl",
                  },
                  {
                    "children": [],
                    "duration": 0.0689690274144823,
                    "name": "GTUYcE",
                    "start": 538.6556924085829,
                    "type": "dUGYl",
                  },
                  {
                    "children": [],
                    "duration": 2.9309201647754435,
                    "name": "KTdZsYg",
                    "start": 538.7280951432377,
                    "type": "dUGYl",
                  },
                ],
                "duration": 55.127917361818845,
                "name": "ZhzOuVaDQIp",
                "start": 536.1510397400183,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 371.3241221156734,
                "name": "QtboRAlO",
                "start": 594.290771087428,
                "type": "dUGYl",
              },
            ],
            "duration": 4318.8956400700545,
            "name": "uctgLKhJRHx",
            "start": 535.327387346647,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [
            {
              "children": [],
              "duration": 2.461531364710936,
              "name": "MhxhARxSxzsGT",
              "start": 536.1650838600234,
              "type": "dUGYl",
            },
            {
              "children": [],
              "duration": 0.0689690274144823,
              "name": "GTUYcE",
              "start": 538.6556924085829,
              "type": "dUGYl",
            },
            {
              "children": [],
              "duration": 2.9309201647754435,
              "name": "KTdZsYg",
              "start": 538.7280951432377,
              "type": "dUGYl",
            },
          ],
          "duration": 55.127917361818845,
          "name": "ZhzOuVaDQIp",
          "start": 536.1510397400183,
          "type": "dUGYl",
        },
      },
    ],
    "pattern": undefined,
    "start": 536.1510397400183,
    "type": "dUGYl",
  },
  {
    "badge": undefined,
    "color": undefined,
    "duration": 371.3241221156734,
    "end": 965.6148932031014,
    "level": 1,
    "nodes": [
      {
        "end": 965.6148932031014,
        "index": 5,
        "level": 1,
        "parent": {
          "end": 4854.223027416701,
          "index": 0,
          "level": 0,
          "parent": null,
          "source": {
            "children": [
              {
                "children": [
                  {
                    "children": [],
                    "duration": 2.461531364710936,
                    "name": "MhxhARxSxzsGT",
                    "start": 536.1650838600234,
                    "type": "dUGYl",
                  },
                  {
                    "children": [],
                    "duration": 0.0689690274144823,
                    "name": "GTUYcE",
                    "start": 538.6556924085829,
                    "type": "dUGYl",
                  },
                  {
                    "children": [],
                    "duration": 2.9309201647754435,
                    "name": "KTdZsYg",
                    "start": 538.7280951432377,
                    "type": "dUGYl",
                  },
                ],
                "duration": 55.127917361818845,
                "name": "ZhzOuVaDQIp",
                "start": 536.1510397400183,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 371.3241221156734,
                "name": "QtboRAlO",
                "start": 594.290771087428,
                "type": "dUGYl",
              },
            ],
            "duration": 4318.8956400700545,
            "name": "uctgLKhJRHx",
            "start": 535.327387346647,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [],
          "duration": 371.3241221156734,
          "name": "QtboRAlO",
          "start": 594.290771087428,
          "type": "dUGYl",
        },
      },
    ],
    "pattern": undefined,
    "start": 594.290771087428,
    "type": "dUGYl",
  },
  {
    "badge": undefined,
    "color": undefined,
    "duration": 5.49393144798978,
    "end": 541.6590153080132,
    "level": 2,
    "nodes": [
      {
        "end": 538.6266152247343,
        "index": 2,
        "level": 2,
        "parent": {
          "end": 591.2789571018371,
          "index": 1,
          "level": 1,
          "parent": {
            "end": 4854.223027416701,
            "index": 0,
            "level": 0,
            "parent": null,
            "source": {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "duration": 2.461531364710936,
                      "name": "MhxhARxSxzsGT",
                      "start": 536.1650838600234,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 0.0689690274144823,
                      "name": "GTUYcE",
                      "start": 538.6556924085829,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 2.9309201647754435,
                      "name": "KTdZsYg",
                      "start": 538.7280951432377,
                      "type": "dUGYl",
                    },
                  ],
                  "duration": 55.127917361818845,
                  "name": "ZhzOuVaDQIp",
                  "start": 536.1510397400183,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 371.3241221156734,
                  "name": "QtboRAlO",
                  "start": 594.290771087428,
                  "type": "dUGYl",
                },
              ],
              "duration": 4318.8956400700545,
              "name": "uctgLKhJRHx",
              "start": 535.327387346647,
              "type": "dUGYl",
            },
          },
          "source": {
            "children": [
              {
                "children": [],
                "duration": 2.461531364710936,
                "name": "MhxhARxSxzsGT",
                "start": 536.1650838600234,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 0.0689690274144823,
                "name": "GTUYcE",
                "start": 538.6556924085829,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 2.9309201647754435,
                "name": "KTdZsYg",
                "start": 538.7280951432377,
                "type": "dUGYl",
              },
            ],
            "duration": 55.127917361818845,
            "name": "ZhzOuVaDQIp",
            "start": 536.1510397400183,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [],
          "duration": 2.461531364710936,
          "name": "MhxhARxSxzsGT",
          "start": 536.1650838600234,
          "type": "dUGYl",
        },
      },
      {
        "end": 538.7246614359974,
        "index": 3,
        "level": 2,
        "parent": {
          "end": 591.2789571018371,
          "index": 1,
          "level": 1,
          "parent": {
            "end": 4854.223027416701,
            "index": 0,
            "level": 0,
            "parent": null,
            "source": {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "duration": 2.461531364710936,
                      "name": "MhxhARxSxzsGT",
                      "start": 536.1650838600234,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 0.0689690274144823,
                      "name": "GTUYcE",
                      "start": 538.6556924085829,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 2.9309201647754435,
                      "name": "KTdZsYg",
                      "start": 538.7280951432377,
                      "type": "dUGYl",
                    },
                  ],
                  "duration": 55.127917361818845,
                  "name": "ZhzOuVaDQIp",
                  "start": 536.1510397400183,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 371.3241221156734,
                  "name": "QtboRAlO",
                  "start": 594.290771087428,
                  "type": "dUGYl",
                },
              ],
              "duration": 4318.8956400700545,
              "name": "uctgLKhJRHx",
              "start": 535.327387346647,
              "type": "dUGYl",
            },
          },
          "source": {
            "children": [
              {
                "children": [],
                "duration": 2.461531364710936,
                "name": "MhxhARxSxzsGT",
                "start": 536.1650838600234,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 0.0689690274144823,
                "name": "GTUYcE",
                "start": 538.6556924085829,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 2.9309201647754435,
                "name": "KTdZsYg",
                "start": 538.7280951432377,
                "type": "dUGYl",
              },
            ],
            "duration": 55.127917361818845,
            "name": "ZhzOuVaDQIp",
            "start": 536.1510397400183,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [],
          "duration": 0.0689690274144823,
          "name": "GTUYcE",
          "start": 538.6556924085829,
          "type": "dUGYl",
        },
      },
      {
        "end": 541.6590153080132,
        "index": 4,
        "level": 2,
        "parent": {
          "end": 591.2789571018371,
          "index": 1,
          "level": 1,
          "parent": {
            "end": 4854.223027416701,
            "index": 0,
            "level": 0,
            "parent": null,
            "source": {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "duration": 2.461531364710936,
                      "name": "MhxhARxSxzsGT",
                      "start": 536.1650838600234,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 0.0689690274144823,
                      "name": "GTUYcE",
                      "start": 538.6556924085829,
                      "type": "dUGYl",
                    },
                    {
                      "children": [],
                      "duration": 2.9309201647754435,
                      "name": "KTdZsYg",
                      "start": 538.7280951432377,
                      "type": "dUGYl",
                    },
                  ],
                  "duration": 55.127917361818845,
                  "name": "ZhzOuVaDQIp",
                  "start": 536.1510397400183,
                  "type": "dUGYl",
                },
                {
                  "children": [],
                  "duration": 371.3241221156734,
                  "name": "QtboRAlO",
                  "start": 594.290771087428,
                  "type": "dUGYl",
                },
              ],
              "duration": 4318.8956400700545,
              "name": "uctgLKhJRHx",
              "start": 535.327387346647,
              "type": "dUGYl",
            },
          },
          "source": {
            "children": [
              {
                "children": [],
                "duration": 2.461531364710936,
                "name": "MhxhARxSxzsGT",
                "start": 536.1650838600234,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 0.0689690274144823,
                "name": "GTUYcE",
                "start": 538.6556924085829,
                "type": "dUGYl",
              },
              {
                "children": [],
                "duration": 2.9309201647754435,
                "name": "KTdZsYg",
                "start": 538.7280951432377,
                "type": "dUGYl",
              },
            ],
            "duration": 55.127917361818845,
            "name": "ZhzOuVaDQIp",
            "start": 536.1510397400183,
            "type": "dUGYl",
          },
        },
        "source": {
          "children": [],
          "duration": 2.9309201647754435,
          "name": "KTdZsYg",
          "start": 538.7280951432377,
          "type": "dUGYl",
        },
      },
    ],
    "pattern": undefined,
    "start": 536.1650838600234,
    "type": "dUGYl",
  },
]
`;
